--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,5 +1,6 @@
 [build]
 target = "./armv7a-vex-v5.json"
+rustflags = ["-C", "target-feature=+neon"]
 
 [unstable]
 build-std = ["core", "compiler_builtins", "alloc"]
