--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,9 +18,11 @@ vexide = "0.7.0"
 vexide-slint = "0.1.0"
 serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }
 postcard = { version = "1.1.3", default-features = false, features = ["alloc"] }
+veranda = "0.1.5"
+rand = { version = "0.9", default-features = false }
 
 [build-dependencies]
-slint-build = "1.13.0"
+slint-build = "1.13.1"
 postcard = { version = "1.1.3", default-features = false, features = ["alloc"] }
 serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }
 
