--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,7 +27,8 @@ postcard = { version = "1.1.3", default-features = false, features = ["alloc"] }
 serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }
 
 [profile.release]
-opt-level = 3
+opt-level = "z"
 strip = true
 lto = true
-codegen-units = 1
+codegen-units = 16
+incremental = true
